app/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-helloworld"
spec:
  selector:
    app: helloworld
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
